--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
-  <link rel="manifest" href="pwa.webmanifest">
+  <link rel="manifest" href="/manifest.json">
 
   <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
